compiler/parser.output
State 104 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 $@1: %empty

    3 statements: statements $@1 statement
    4           | statement

    5 statement: expression SEMICOLON
    6          | ifstmt
    7          | whilestmt
    8          | forstmt
    9          | returnstmt
   10          | BREAK SEMICOLON
   11          | CONTINUE SEMICOLON
   12          | block
   13          | funcdef
   14          | SEMICOLON

   15 expression: assignexpr
   16           | expression PLUS expression
   17           | expression MINUS expression
   18           | expression MULT expression
   19           | expression DIV expression
   20           | expression MOD expression
   21           | expression GREATER_THAN expression
   22           | expression GREATER_OR_EQUAL expression
   23           | expression LESS_THAN expression
   24           | expression LESS_OR_EQUAL expression
   25           | expression EQUALS_EQUALS expression
   26           | expression NOT_EQUALS expression

   27 $@2: %empty

   28 expression: expression AND $@2 M expression

   29 $@3: %empty

   30 expression: expression OR $@3 M expression
   31           | term

   32 M: %empty

   33 term: LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
   34     | MINUS expression
   35     | NOT expression
   36     | PLUS_PLUS lvalue
   37     | lvalue PLUS_PLUS
   38     | MINUS_MINUS lvalue
   39     | lvalue MINUS_MINUS
   40     | primary

   41 $@4: %empty

   42 assignexpr: lvalue $@4 EQUALS expression

   43 primary: lvalue
   44        | call
   45        | objectdef
   46        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   47        | const

   48 lvalue: ID
   49       | LOCAL ID
   50       | DOUBLE_COLON ID
   51       | member

   52 member: lvalue DOT ID
   53       | lvalue LEFT_BRACE expression RIGHT_BRACE
   54       | call DOT ID
   55       | call LEFT_BRACE expression RIGHT_BRACE

   56 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   57     | lvalue callsuffix
   58     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   59 callsuffix: normcall
   60           | methodcall

   61 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   62 methodcall: DOUBLE_DOT ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   63 elist: expression
   64      | expression COMMA elist
   65      | %empty

   66 objectdef: LEFT_BRACE elist RIGHT_BRACE
   67          | LEFT_BRACE indexed RIGHT_BRACE

   68 indexed: indexedelem
   69        | indexedelem COMMA indexed

   70 indexedelem: LEFT_BRACKET expression COLON expression RIGHT_BRACKET

   71 block: blockstart blockend
   72      | blockstart blockstmt blockend

   73 blockstart: LEFT_BRACKET

   74 blockend: RIGHT_BRACKET

   75 blockstmt: statement
   76          | statement blockstmt

   77 $@5: %empty

   78 $@6: %empty

   79 funcdef: funcstart LEFT_PARENTHESIS $@5 idlist RIGHT_PARENTHESIS $@6 block

   80 funcstart: FUNCTION ID
   81          | FUNCTION

   82 const: NUM
   83      | STRING
   84      | NIL
   85      | TRUE
   86      | FALSE

   87 idlist: arg
   88       | arg COMMA idlist
   89       | %empty

   90 arg: ID

   91 ifstmt: ifprefix statement
   92       | ifprefix statement ELSE statement

   93 $@7: %empty

   94 ifprefix: IF LEFT_PARENTHESIS $@7 expression RIGHT_PARENTHESIS

   95 whilestart: WHILE

   96 $@8: %empty

   97 whilecond: LEFT_PARENTHESIS $@8 expression RIGHT_PARENTHESIS

   98 whilestmt: whilestart whilecond statement

   99 forprefix: forstart elist SEMICOLON M expression SEMICOLON

  100 forstart: FOR LEFT_PARENTHESIS

  101 forstmt: forprefix N elist RIGHT_PARENTHESIS N statement N

  102 N: %empty

  103 returnstmt: RETURN SEMICOLON
  104           | RETURN expression SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <numValue> (258) 82
    ID <strValue> (259) 48 49 50 52 54 62 80 90
    STRING <strValue> (260) 83
    IF <strValue> (261) 94
    ELSE <strValue> (262) 92
    WHILE <strValue> (263) 95
    FOR <strValue> (264) 100
    FUNCTION <strValue> (265) 80 81
    RETURN <strValue> (266) 103 104
    BREAK <strValue> (267) 10
    CONTINUE <strValue> (268) 11
    AND <strValue> (269) 28
    NOT <strValue> (270) 35
    OR <strValue> (271) 30
    LOCAL <strValue> (272) 49
    TRUE <strValue> (273) 85
    FALSE <strValue> (274) 86
    NIL <strValue> (275) 84
    LEFT_BRACE <strValue> (276) 53 55 66 67
    RIGHT_BRACE <strValue> (277) 53 55 66 67
    LEFT_BRACKET <strValue> (278) 70 73
    RIGHT_BRACKET <strValue> (279) 70 74
    LEFT_PARENTHESIS <strValue> (280) 33 46 56 58 61 62 79 94 97 100
    RIGHT_PARENTHESIS <strValue> (281) 33 46 56 58 61 62 79 94 97 101
    SEMICOLON <strValue> (282) 5 10 11 14 99 103 104
    COMMA <strValue> (283) 64 69 88
    COLON <strValue> (284) 70
    DOUBLE_COLON <strValue> (285) 50
    DOT <strValue> (286) 52 54
    DOUBLE_DOT <strValue> (287) 62
    EQUALS <strValue> (288) 42
    PLUS <strValue> (289) 16
    MINUS <strValue> (290) 17 34
    MULT <strValue> (291) 18
    DIV <strValue> (292) 19
    MOD <strValue> (293) 20
    EQUALS_EQUALS <strValue> (294) 25
    NOT_EQUALS <strValue> (295) 26
    PLUS_PLUS <strValue> (296) 36 37
    MINUS_MINUS <strValue> (297) 38 39
    GREATER_THAN <strValue> (298) 21
    LESS_THAN <strValue> (299) 23
    GREATER_OR_EQUAL <strValue> (300) 22
    LESS_OR_EQUAL <strValue> (301) 24
    UMINUS <strValue> (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program (49)
        on left: 1
        on right: 0
    statements <stmtValue> (50)
        on left: 3 4
        on right: 1 3
    $@1 (51)
        on left: 2
        on right: 3
    statement <stmtValue> (52)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 3 4 75 76 91 92 98 101
    expression <exprValue> (53)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 28 30 31
        on right: 5 16 17 18 19 20 21 22 23 24 25 26 28 30 33 34 35 42 53 55 63 64 70 94 97 99 104
    $@2 (54)
        on left: 27
        on right: 28
    $@3 (55)
        on left: 29
        on right: 30
    M <numValue> (56)
        on left: 32
        on right: 28 30 99
    term <exprValue> (57)
        on left: 33 34 35 36 37 38 39 40
        on right: 31
    assignexpr <exprValue> (58)
        on left: 42
        on right: 15
    $@4 (59)
        on left: 41
        on right: 42
    primary <exprValue> (60)
        on left: 43 44 45 46 47
        on right: 40
    lvalue <exprValue> (61)
        on left: 48 49 50 51
        on right: 36 37 38 39 42 43 52 53 57
    member <strValue> (62)
        on left: 52 53 54 55
        on right: 51
    call <exprValue> (63)
        on left: 56 57 58
        on right: 44 54 55 56
    callsuffix <functionCall> (64)
        on left: 59 60
        on right: 57
    normcall <functionCall> (65)
        on left: 61
        on right: 59
    methodcall <functionCall> (66)
        on left: 62
        on right: 60
    elist <exprValue> (67)
        on left: 63 64 65
        on right: 56 58 61 62 64 66 99 101
    objectdef <exprValue> (68)
        on left: 66 67
        on right: 45
    indexed <exprValue> (69)
        on left: 68 69
        on right: 67 69
    indexedelem <exprValue> (70)
        on left: 70
        on right: 68 69
    block <stmtValue> (71)
        on left: 71 72
        on right: 12 79
    blockstart (72)
        on left: 73
        on right: 71 72
    blockend (73)
        on left: 74
        on right: 71 72
    blockstmt <stmtValue> (74)
        on left: 75 76
        on right: 72 76
    funcdef <exprValue> (75)
        on left: 79
        on right: 13 46 58
    $@5 (76)
        on left: 77
        on right: 79
    $@6 (77)
        on left: 78
        on right: 79
    funcstart <exprValue> (78)
        on left: 80 81
        on right: 79
    const <exprValue> (79)
        on left: 82 83 84 85 86
        on right: 47
    idlist <strValue> (80)
        on left: 87 88 89
        on right: 79 88
    arg <strValue> (81)
        on left: 90
        on right: 87 88
    ifstmt <stmtValue> (82)
        on left: 91 92
        on right: 6
    ifprefix <numValue> (83)
        on left: 94
        on right: 91 92
    $@7 (84)
        on left: 93
        on right: 94
    whilestart <numValue> (85)
        on left: 95
        on right: 98
    whilecond <numValue> (86)
        on left: 97
        on right: 98
    $@8 (87)
        on left: 96
        on right: 97
    whilestmt <stmtValue> (88)
        on left: 98
        on right: 7
    forprefix <exprValue> (89)
        on left: 99
        on right: 101
    forstart (90)
        on left: 100
        on right: 99
    forstmt <stmtValue> (91)
        on left: 101
        on right: 8
    N <numValue> (92)
        on left: 102
        on right: 101
    returnstmt <stmtValue> (93)
        on left: 103 104
        on right: 9


State 0

    0 $accept: . program $end

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    IF                shift, and go to state 4
    WHILE             shift, and go to state 5
    FOR               shift, and go to state 6
    FUNCTION          shift, and go to state 7
    RETURN            shift, and go to state 8
    BREAK             shift, and go to state 9
    CONTINUE          shift, and go to state 10
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 17
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    program     go to state 24
    statements  go to state 25
    statement   go to state 26
    expression  go to state 27
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    block       go to state 35
    blockstart  go to state 36
    funcdef     go to state 37
    funcstart   go to state 38
    const       go to state 39
    ifstmt      go to state 40
    ifprefix    go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstart    go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 1

   82 const: NUM .

    $default  reduce using rule 82 (const)


State 2

   48 lvalue: ID .

    $default  reduce using rule 48 (lvalue)


State 3

   83 const: STRING .

    $default  reduce using rule 83 (const)


State 4

   94 ifprefix: IF . LEFT_PARENTHESIS $@7 expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 48


State 5

   95 whilestart: WHILE .

    $default  reduce using rule 95 (whilestart)


State 6

  100 forstart: FOR . LEFT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 49


State 7

   80 funcstart: FUNCTION . ID
   81          | FUNCTION .

    ID  shift, and go to state 50

    $default  reduce using rule 81 (funcstart)


State 8

  103 returnstmt: RETURN . SEMICOLON
  104           | RETURN . expression SEMICOLON

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 51
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 52
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 9

   10 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 10

   11 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 11

   35 term: NOT . expression

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 55
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 12

   49 lvalue: LOCAL . ID

    ID  shift, and go to state 56


State 13

   85 const: TRUE .

    $default  reduce using rule 85 (const)


State 14

   86 const: FALSE .

    $default  reduce using rule 86 (const)


State 15

   84 const: NIL .

    $default  reduce using rule 84 (const)


State 16

   66 objectdef: LEFT_BRACE . elist RIGHT_BRACE
   67          | LEFT_BRACE . indexed RIGHT_BRACE

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 57
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    $default  reduce using rule 65 (elist)

    expression   go to state 58
    term         go to state 28
    assignexpr   go to state 29
    primary      go to state 30
    lvalue       go to state 31
    member       go to state 32
    call         go to state 33
    elist        go to state 59
    objectdef    go to state 34
    indexed      go to state 60
    indexedelem  go to state 61
    const        go to state 39


State 17

   73 blockstart: LEFT_BRACKET .

    $default  reduce using rule 73 (blockstart)


State 18

   33 term: LEFT_PARENTHESIS . expression RIGHT_PARENTHESIS
   46 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   58 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    FUNCTION          shift, and go to state 7
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 62
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    funcdef     go to state 63
    funcstart   go to state 38
    const       go to state 39


State 19

   14 statement: SEMICOLON .

    $default  reduce using rule 14 (statement)


State 20

   50 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 64


State 21

   34 term: MINUS . expression

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 65
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 22

   36 term: PLUS_PLUS . lvalue

    ID                shift, and go to state 2
    LOCAL             shift, and go to state 12
    LEFT_PARENTHESIS  shift, and go to state 66
    DOUBLE_COLON      shift, and go to state 20

    lvalue  go to state 67
    member  go to state 32
    call    go to state 68


State 23

   38 term: MINUS_MINUS . lvalue

    ID                shift, and go to state 2
    LOCAL             shift, and go to state 12
    LEFT_PARENTHESIS  shift, and go to state 66
    DOUBLE_COLON      shift, and go to state 20

    lvalue  go to state 69
    member  go to state 32
    call    go to state 68


State 24

    0 $accept: program . $end

    $end  shift, and go to state 70


State 25

    1 program: statements .
    3 statements: statements . $@1 statement

    $end      reduce using rule 1 (program)
    $default  reduce using rule 2 ($@1)

    $@1  go to state 71


State 26

    4 statements: statement .

    $default  reduce using rule 4 (statements)


State 27

    5 statement: expression . SEMICOLON
   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   25           | expression . EQUALS_EQUALS expression
   26           | expression . NOT_EQUALS expression
   28           | expression . AND $@2 M expression
   30           | expression . OR $@3 M expression

    AND               shift, and go to state 72
    OR                shift, and go to state 73
    SEMICOLON         shift, and go to state 74
    PLUS              shift, and go to state 75
    MINUS             shift, and go to state 76
    MULT              shift, and go to state 77
    DIV               shift, and go to state 78
    MOD               shift, and go to state 79
    EQUALS_EQUALS     shift, and go to state 80
    NOT_EQUALS        shift, and go to state 81
    GREATER_THAN      shift, and go to state 82
    LESS_THAN         shift, and go to state 83
    GREATER_OR_EQUAL  shift, and go to state 84
    LESS_OR_EQUAL     shift, and go to state 85


State 28

   31 expression: term .

    $default  reduce using rule 31 (expression)


State 29

   15 expression: assignexpr .

    $default  reduce using rule 15 (expression)


State 30

   40 term: primary .

    $default  reduce using rule 40 (term)


State 31

   37 term: lvalue . PLUS_PLUS
   39     | lvalue . MINUS_MINUS
   42 assignexpr: lvalue . $@4 EQUALS expression
   43 primary: lvalue .
   52 member: lvalue . DOT ID
   53       | lvalue . LEFT_BRACE expression RIGHT_BRACE
   57 call: lvalue . callsuffix

    LEFT_BRACE        shift, and go to state 86
    LEFT_PARENTHESIS  shift, and go to state 87
    DOT               shift, and go to state 88
    DOUBLE_DOT        shift, and go to state 89
    PLUS_PLUS         shift, and go to state 90
    MINUS_MINUS       shift, and go to state 91

    EQUALS    reduce using rule 41 ($@4)
    $default  reduce using rule 43 (primary)

    $@4         go to state 92
    callsuffix  go to state 93
    normcall    go to state 94
    methodcall  go to state 95


State 32

   51 lvalue: member .

    $default  reduce using rule 51 (lvalue)


State 33

   44 primary: call .
   54 member: call . DOT ID
   55       | call . LEFT_BRACE expression RIGHT_BRACE
   56 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACE        shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 97
    DOT               shift, and go to state 98

    $default  reduce using rule 44 (primary)


State 34

   45 primary: objectdef .

    $default  reduce using rule 45 (primary)


State 35

   12 statement: block .

    $default  reduce using rule 12 (statement)


State 36

   71 block: blockstart . blockend
   72      | blockstart . blockstmt blockend

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    IF                shift, and go to state 4
    WHILE             shift, and go to state 5
    FOR               shift, and go to state 6
    FUNCTION          shift, and go to state 7
    RETURN            shift, and go to state 8
    BREAK             shift, and go to state 9
    CONTINUE          shift, and go to state 10
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 17
    RIGHT_BRACKET     shift, and go to state 99
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    statement   go to state 100
    expression  go to state 27
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    block       go to state 35
    blockstart  go to state 36
    blockend    go to state 101
    blockstmt   go to state 102
    funcdef     go to state 37
    funcstart   go to state 38
    const       go to state 39
    ifstmt      go to state 40
    ifprefix    go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstart    go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 37

   13 statement: funcdef .

    $default  reduce using rule 13 (statement)


State 38

   79 funcdef: funcstart . LEFT_PARENTHESIS $@5 idlist RIGHT_PARENTHESIS $@6 block

    LEFT_PARENTHESIS  shift, and go to state 103


State 39

   47 primary: const .

    $default  reduce using rule 47 (primary)


State 40

    6 statement: ifstmt .

    $default  reduce using rule 6 (statement)


State 41

   91 ifstmt: ifprefix . statement
   92       | ifprefix . statement ELSE statement

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    IF                shift, and go to state 4
    WHILE             shift, and go to state 5
    FOR               shift, and go to state 6
    FUNCTION          shift, and go to state 7
    RETURN            shift, and go to state 8
    BREAK             shift, and go to state 9
    CONTINUE          shift, and go to state 10
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 17
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    statement   go to state 104
    expression  go to state 27
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    block       go to state 35
    blockstart  go to state 36
    funcdef     go to state 37
    funcstart   go to state 38
    const       go to state 39
    ifstmt      go to state 40
    ifprefix    go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstart    go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 42

   98 whilestmt: whilestart . whilecond statement

    LEFT_PARENTHESIS  shift, and go to state 105

    whilecond  go to state 106


State 43

    7 statement: whilestmt .

    $default  reduce using rule 7 (statement)


State 44

  101 forstmt: forprefix . N elist RIGHT_PARENTHESIS N statement N

    $default  reduce using rule 102 (N)

    N  go to state 107


State 45

   99 forprefix: forstart . elist SEMICOLON M expression SEMICOLON

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    $default  reduce using rule 65 (elist)

    expression  go to state 58
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    elist       go to state 108
    objectdef   go to state 34
    const       go to state 39


State 46

    8 statement: forstmt .

    $default  reduce using rule 8 (statement)


State 47

    9 statement: returnstmt .

    $default  reduce using rule 9 (statement)


State 48

   94 ifprefix: IF LEFT_PARENTHESIS . $@7 expression RIGHT_PARENTHESIS

    $default  reduce using rule 93 ($@7)

    $@7  go to state 109


State 49

  100 forstart: FOR LEFT_PARENTHESIS .

    $default  reduce using rule 100 (forstart)


State 50

   80 funcstart: FUNCTION ID .

    $default  reduce using rule 80 (funcstart)


State 51

  103 returnstmt: RETURN SEMICOLON .

    $default  reduce using rule 103 (returnstmt)


State 52

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   25           | expression . EQUALS_EQUALS expression
   26           | expression . NOT_EQUALS expression
   28           | expression . AND $@2 M expression
   30           | expression . OR $@3 M expression
  104 returnstmt: RETURN expression . SEMICOLON

    AND               shift, and go to state 72
    OR                shift, and go to state 73
    SEMICOLON         shift, and go to state 110
    PLUS              shift, and go to state 75
    MINUS             shift, and go to state 76
    MULT              shift, and go to state 77
    DIV               shift, and go to state 78
    MOD               shift, and go to state 79
    EQUALS_EQUALS     shift, and go to state 80
    NOT_EQUALS        shift, and go to state 81
    GREATER_THAN      shift, and go to state 82
    LESS_THAN         shift, and go to state 83
    GREATER_OR_EQUAL  shift, and go to state 84
    LESS_OR_EQUAL     shift, and go to state 85


State 53

   10 statement: BREAK SEMICOLON .

    $default  reduce using rule 10 (statement)


State 54

   11 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 11 (statement)


State 55

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   25           | expression . EQUALS_EQUALS expression
   26           | expression . NOT_EQUALS expression
   28           | expression . AND $@2 M expression
   30           | expression . OR $@3 M expression
   35 term: NOT expression .

    $default  reduce using rule 35 (term)


State 56

   49 lvalue: LOCAL ID .

    $default  reduce using rule 49 (lvalue)


State 57

   70 indexedelem: LEFT_BRACKET . expression COLON expression RIGHT_BRACKET

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 111
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 58

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   25           | expression . EQUALS_EQUALS expression
   26           | expression . NOT_EQUALS expression
   28           | expression . AND $@2 M expression
   30           | expression . OR $@3 M expression
   63 elist: expression .
   64      | expression . COMMA elist

    AND               shift, and go to state 72
    OR                shift, and go to state 73
    COMMA             shift, and go to state 112
    PLUS              shift, and go to state 75
    MINUS             shift, and go to state 76
    MULT              shift, and go to state 77
    DIV               shift, and go to state 78
    MOD               shift, and go to state 79
    EQUALS_EQUALS     shift, and go to state 80
    NOT_EQUALS        shift, and go to state 81
    GREATER_THAN      shift, and go to state 82
    LESS_THAN         shift, and go to state 83
    GREATER_OR_EQUAL  shift, and go to state 84
    LESS_OR_EQUAL     shift, and go to state 85

    $default  reduce using rule 63 (elist)


State 59

   66 objectdef: LEFT_BRACE elist . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 113


State 60

   67 objectdef: LEFT_BRACE indexed . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 114


State 61

   68 indexed: indexedelem .
   69        | indexedelem . COMMA indexed

    COMMA  shift, and go to state 115

    $default  reduce using rule 68 (indexed)


State 62

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   25           | expression . EQUALS_EQUALS expression
   26           | expression . NOT_EQUALS expression
   28           | expression . AND $@2 M expression
   30           | expression . OR $@3 M expression
   33 term: LEFT_PARENTHESIS expression . RIGHT_PARENTHESIS

    AND                shift, and go to state 72
    OR                 shift, and go to state 73
    RIGHT_PARENTHESIS  shift, and go to state 116
    PLUS               shift, and go to state 75
    MINUS              shift, and go to state 76
    MULT               shift, and go to state 77
    DIV                shift, and go to state 78
    MOD                shift, and go to state 79
    EQUALS_EQUALS      shift, and go to state 80
    NOT_EQUALS         shift, and go to state 81
    GREATER_THAN       shift, and go to state 82
    LESS_THAN          shift, and go to state 83
    GREATER_OR_EQUAL   shift, and go to state 84
    LESS_OR_EQUAL      shift, and go to state 85


State 63

   46 primary: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS
   58 call: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 117


State 64

   50 lvalue: DOUBLE_COLON ID .

    $default  reduce using rule 50 (lvalue)


State 65
